# tree-sitter-jnoweb

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
example/: simple.jnw
formatters/: jnoweb-fmt
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  engine.txt  sexpr.txt
